--- a/src/components/Footer.scss
+++ b/src/components/Footer.scss
@@ -35,7 +35,7 @@
   }
 
   &__text {
-    font-size: $font-size-xl;
+    font-size: 24px;
     font-weight: $font-weight-medium;
     text-align: center;
 
