--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -17,7 +17,7 @@
 
     @media (max-width: $mobile) {
       background-color: transparent;
-      padding: 22px 0 27px;
+      padding: 22px 20px 27px;
     }
   }
 
