--- a/src/pages/NotFound.scss
+++ b/src/pages/NotFound.scss
@@ -48,7 +48,7 @@
   &__link {
     font-size: 1.125rem;
     font-weight: 500;
-    color: $primary-color;
+    color: $text-color;
     text-decoration: underline;
     transition: opacity 0.3s ease;
 
