--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -44,9 +44,9 @@
 
     .nav-item {
       .nav-link {
-        font-size: $font-size-xl;
+        font-size: 24px;
         font-weight: $font-weight-medium;
-        color: $primary-color;
+        color: $black;
         text-decoration: none;
         position: relative;
         transition: $transition-base;
